Added villains query
